Fix: Make pen buttons appearnace have white border when ative to improve visibility

--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ h1 {
     background-color: #2F3362;
     color: #AFADB6;
     cursor: pointer;
-    border-color: #2F3362;
+    border-color: #AFADB6;
     border-style: solid;
     padding: 2px;
 }
@@ -116,7 +116,7 @@ h1 {
     background-color: #AFADB6;
     color: #2F3362;
     cursor: pointer;
-    border-color: #2F3362;
+    border-color: #AFADB6;
     border-style: solid;
     padding: 2px;
 }
